<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="@dimen/title_block_padding">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:layout_centerHorizontal="true"
            android:text="@string/app_subtitle"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_instructions"
            style="@style/SmallTitle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_subtitle"
            android:text="@string/app_instructions" />

        <TextView
            android:id="@+id/tv_instructions_text"
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_instructions"
            android:gravity="fill_horizontal"
            android:text="@string/app_instructions_text" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_container"
        android:layout_marginLeft="@dimen/parameters_list_margin_left_right"
        android:layout_marginRight="@dimen/parameters_list_margin_left_right"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            style="@style/SmallTitle"
            android:layout_gravity="left"
            android:textSize="18sp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="Parameters:" />

        <ImageView style="@style/HorizontalSolidLineSeparator" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/parameter_block_height">

            <TextView
                style="@style/NormalListText"
                android:text="Set the Zoom of the figure" />

            <EditText
                android:id="@+id/et_zoom"
                android:layout_width="@dimen/parameter_edit_text_width"
                android:layout_marginRight="@dimen/parameter_list_item_margin_right"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/default_zoom_parameter"
                android:gravity="center_horizontal"
                android:inputType="number"/>

        </RelativeLayout>

        <ImageView style="@style/HorizontalDottedLineSeparator" />

        <TextView
            style="@style/SmallTitle"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textSize="18sp"
            android:gravity="bottom|center"
            android:text="@string/color_title_parameter" />

        <ImageView style="@style/HorizontalSolidLineSeparator" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TableRow
                android:minHeight="@dimen/parameter_color_min_height"
                android:gravity="center_vertical">

                <TextView
                    style="@style/NormalListText"
                    android:text="@string/red_color_parameter" />

                <EditText
                    android:id="@+id/red_parameter_value"
                    style="@style/Parameter8BitsEditText" />

                <View style="@style/VerticalSolidLineColorSeparator" />

                <SeekBar
                    android:id="@+id/red_parameter_seekbar"
                    style="@style/ParameterColoredSeekBar"
                    android:progress="@string/color_default_progress" />

            </TableRow>

            <ImageView style="@style/HorizontalDottedLineSeparator" />

            <TableRow
                android:minHeight="@dimen/parameter_color_min_height"
                android:gravity="center_vertical">

                <TextView
                    style="@style/NormalListText"
                    android:text="@string/green_color_parameter" />

                <EditText
                    android:id="@+id/green_parameter_value"
                    style="@style/Parameter8BitsEditText" />

                <View style="@style/VerticalSolidLineColorSeparator" />

                <SeekBar
                    android:id="@+id/green_parameter_seekbar"
                    style="@style/ParameterColoredSeekBar"
                    android:progress="@string/color_default_progress" />

            </TableRow>

            <ImageView style="@style/HorizontalDottedLineSeparator" />

            <TableRow
                android:minHeight="@dimen/parameter_color_min_height"
                android:gravity="center_vertical">

                <TextView
                    style="@style/NormalListText"
                    android:text="@string/blue_color_parameter" />

                <EditText
                    android:id="@+id/blue_parameter_value"
                    style="@style/Parameter8BitsEditText" />

                <View style="@style/VerticalSolidLineColorSeparator" />

                <SeekBar
                    android:id="@+id/blue_parameter_seekbar"
                    style="@style/ParameterColoredSeekBar"
                    android:progress="@string/color_default_progress" />

            </TableRow>

            <ImageView style="@style/HorizontalDottedLineSeparator" />

        </TableLayout>

        <Button
            android:id="@+id/btn_draw_mandelbrot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/button_draw_mandelbrot" />

    </LinearLayout>

</RelativeLayout>